--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,38 @@
+<!DOCTYPE html>
+<html>
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <title>Lista della Spesa</title>
+    </head> 
 <body>
-    <h1>La tua Lista della Spesa</h1>
-    {% if lista_spesa %}
-        <ul>
-        {% for elemento in lista_spesa %}
-        <li>
-        {{ elemento }}
-    <form action="/rimuovi/{{ loop.index0 }}" method="post"
-    
-    style="display:inline;">
-    
-    <button type="submit">Rimuovi</button>
-    </form>
-        </li>
-        {% endfor %}
-            </ul>
-        {% else %}
-        <p>La lista è vuota.</p>
-        {% endif %}
-    <form action="/aggiungi" method="post">
-    <input type="text" name="elemento" placeholder="Aggiungi un elemento" required>
-    <button type="submit">Aggiungi</button>
-    </form>
-    </body>
+    <div id = "cosa">
+        <h1>Lista spesa</h1>
+        {% if lista_spesa %}
+            <ul>
+            {% for elemento in lista_spesa %}
+            <li>
+            {{ elemento }}
+
+        <form action="/rimuovi/{{ loop.index0 }}" method="post" style="display:inline;">
+            <button type="submit">Rimuovi</button>
+        </form>
+
+            </li>
+            {% endfor %}
+                </ul>
+            {% else %}
+            <p>La lista è vuota.</p>
+            {% endif %}
+
+        <form action="/aggiungi" method="post">
+            <input type="text" name="elemento" placeholder="Aggiungi un elemento" required>
+            <button type="submit">Aggiungi</button>
+        </form>
+        <br>
+        <form action="/svuota" method="post" style="display:inline;">
+            <button type="submit">Svuota lista</button>
+        </form>
+    </div>
+</body>
