--- a/templates/index.html
+++ b/templates/index.html
@@ -5,31 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style.css">
     <title>Lista della Spesa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
 <body>
-    <h1>Lista spesa</h1>
-    <form action="/aggiungi" method="post">
-        <input type="text" name="elemento" placeholder="Aggiungi un elemento" required>
-        <button type="submit">Aggiungi</button>
-    </form>
+    <div class="container-fluid p-5 bg-primary text-white text-center">
+        <h1>Lista spesa</h1>
+    </div>
     <br>
-    <div id = "cosa">
+    <div id="form-aggiungere">
+        <form action="/aggiungi" method="post" class="button-container">
+            <div class="mb-3 mt-3">
+            <label for="elemento" class="form-label">Elemento:</label>
+            <input type="elemento" class="form-control" placeholder="Aggiungi un elemento" name="elemento" required>
+            </div>        
+            <button type="submit" class="btn btn-success">Aggiungi</button>
+        </form>
+        <br>
+        <form action="/svuota" method="post" style="display:inline;" id="btn-svuota-lista">
+            <button type="submit" class="btn btn-danger">Svuota lista</button>
+        </form>
+    </div>
+    <br>
+    
+    <div id = "zona-elementi">
         {% if lista_spesa %}
         <ul>
             {% for elemento in lista_spesa %}
             <li>
                 {{ elemento.elemento }}
                 <form action="/rimuovi/{{ elemento.id }}" method="post" style="display:inline;">
-                <button type="submit">Rimuovi</button></form>
+                <button type="submit" class="btn btn-warning">Rimuovi</button></form>
             </li>
             {% endfor %}
         {% else %}
             <p>La lista è vuota.</p>
         {% endif %}
         </ul>
-        <form action="/svuota" method="post" style="display:inline;">
-            <button type="submit">Svuota lista</button>
-        </form>
     </div>
     <br>
 </body>
